--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,27 @@
   font-size: large;
 }
 
+.authorimage {
+    width: 300px;
+}
+
+.answer{
+    background-color: rgba(117, 170, 226, 0.41);
+    padding: 15px 30px 15px 15px;
+    width: 100%;
+    height: 70px;
+    margin-bottom: 15px;
+    cursor: pointer;
+}
+
+.answer:hover{
+    background-color:rgba(117, 170, 226, 0.56);
+}
+
+.credit {
+    margin-top: 20px;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
